--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -25,7 +25,9 @@
         </div>
       </div>
     </div>
+  </div>
 
+  <div class="row">
     <div class="calendar" [ngClass]=" showResults ? 'col-md-9': 'col-md-12'">
       <div *ngFor="let day of daysTxt; let i of index;" class="card card-day" [ngClass]="{'float-left': i%7!=0}">
         {{day}}
@@ -39,11 +41,11 @@
 
       <!-- TODO fix the conditional styling - this fucks up when year changes -->
       <div *ngFor="let day of Object.keys(appointments[year][month]); let i of index;" class="card card-month"
-        [ngClass]="{'float-left': i +dayOfWeekFirstOfMonth.length %7!=0, 'is-today-card':(dayOfMonth == day) && (currentMonth == month)}">
+        [ngClass]="{'float-left': i +dayOfWeekFirstOfMonth.length %7!=0}">
 
         <div class="card-body" (dblclick)="openModal(template, month, day)">
 
-          <p class="card-title day-title">{{day}}</p>
+          <p class="card-title day-title" [ngClass]="{'is-today-card':(dayOfMonth == day) && (currentMonth == month)}">{{day}}</p>
 
           <div *ngFor="let appt of appointments[year][month][day]; index as i;">
             <!-- appt entry -->
@@ -57,24 +59,23 @@
     </div>
 
     <!-- Results Pane-->
-    <div *ngIf="showResults" class="col-md-3 search-results">
+    <div [ngClass]="showResults?'slide-left':'slide-out-right'" class="col-md-3 search-results">
       <div class="row results-header">
-        <div class="col-sm-10 text-left">
-          <p>Search Results</p>
-        </div>
-        <div class="col-sm-2 text-right">
-          <i class="fa fa-times link" (click)="showResults=!showResults"></i>
-        </div>
+        <div class="col-sm-12">
+            <i class="fa fa-arrow-circle-right hvr-grow link" (click)="showResults=!showResults"></i>
+          </div>
       </div>
 
-      <div *ngIf="searchResults.length < 1">
-        <p>No results found matching:
-          <b>{{searchParam}}</b>
+      <div *ngIf="searchResults.length < 1" class="no-results">
+        <p>No results found matching <b>{{searchParam}}</b>
         </p>
       </div>
 
-      <div *ngFor="let result of searchResults" class="results-disp jumbotron link" (click)="selectResult(result.date)">
-        <h3>{{result.title}}</h3> {{result.date|date:'fullDate'}}
+      <div *ngFor="let result of searchResults" class="results-disp" (click)="selectResult(result.date)">
+        <div class="search-result link">
+          <div class="search-result-title">{{result.title}}</div>
+          <div class="search-result-date">{{result.date|date:'fullDate'}}</div>
+        </div>
       </div>
     </div>
 
@@ -113,7 +114,7 @@
   </div>
 
   <div class="modal-footer">
-      <button type="submit" class="btn btn-save" (click)="saveAppt()" [disabled]="!apptForm.form.valid">Save</button>
+    <button type="submit" class="btn btn-save" (click)="saveAppt()" [disabled]="!apptForm.form.valid">Save</button>
     <button class="btn btn-cancel" (click)="cancelAppt()">Cancel</button>
   </div>
 </ng-template>
