--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -59,7 +59,7 @@
     </div>
 
     <!-- Results Pane-->
-    <div [ngClass]="slideLeft?'slide-left':'slide-out-right'" class="col-md-3 search-results">
+    <div *ngIf="showResults" [ngClass]="{'slide-left':slideLeft==true, 'slide-out-right':slideRight==true}" class="col-md-3 search-results">
       <div class="row results-header">
         <div class="col-sm-12">
             <i class="fa fa-arrow-circle-right hvr-grow link" (click)="hideResults()"></i>
@@ -101,7 +101,7 @@
       <div class="form-group row">
         <label for="time" class="col-md-2 col-form-label">Time</label>
         <div class="col-md-10 text-center">
-          <timepicker [(ngModel)]="mytime" [showMeridian]="true" id="time" [(ngModel)]="appointment.time" name="time"></timepicker>
+          <timepicker [showMeridian]="true" id="time" [(ngModel)]="appointment.time" name="time"></timepicker>
         </div>
       </div>
       <div class="form-group row">
